add more languages, workaround for arabic and persian rtl issue

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -797,7 +797,7 @@ en:
         msa: Malay – بهاس ملايو
         mul: more languages upon request
         nor: Norwegian - Norsk
-        pan: Punjabi - پنجابی / ਪੰਜਾਬੀ
+        pan: Punjabi - ਪੰਜਾਬੀ / پنجابی
         pol: Polish - polski
         por: Portuguese - português
         pus: Pashto - پښتو‎
