--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -818,7 +818,7 @@ fa:
         msa: زبان مالایی – بهاس ملايو
         mul: بقیه زبانها با توجه به درخواست
         nor: نروژی - Norsk
-        pan: زبان پنجابی - پنجابی / ਪੰਜਾਬੀ
+        pan: زبان پنجابی - ਪੰਜਾਬੀ / پنجابی
         pol: لهستانی -  polski
         por: پرتغالی - português
         pus: پشتو -  پښتو‎
