--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -876,7 +876,7 @@ pl:
         msa: Język malajski – بهاس ملايو
         mul: inne języki na życzenie
         nor: Język norweski - Norsk
-        pan: Język pendżabski - پنجابی / ਪੰਜਾਬੀ
+        pan: Język pendżabski - ਪੰਜਾਬੀ / پنجابی
         pol: Język polski - polski
         por: Język portugalski - português
         pus: Język paszto - پښتو‎
