--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -629,6 +629,7 @@ ru:
         msa: Msa
         mul: Mul
         nor: Nor
+        pan: Pan
         pol: Pol
         por: Por
         pus: Pus
@@ -858,6 +859,7 @@ ru:
         msa: Мала́йский язы́к – بهاس ملايو
         mul: другие языки по запросу
         nor: Норвежский язык - Norsk
+        pan: Панджаби - ਪੰਜਾਬੀ / پنجابی
         pol: Польский язык - polski
         por: Португальский язык - português
         pus: Пушту - پښتو‎
