--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -529,6 +529,7 @@ tr:
         msa: Msa
         mul: Mul
         nor: Nor
+        pan: Pan
         pol: Pol
         por: Por
         pus: Pus
@@ -748,6 +749,7 @@ tr:
         msa: Malayca – بهاس ملايو
         mul: Talep üzerine diğer diller
         nor: Norveççe - Norsk
+        pan: Pencapça - ਪੰਜਾਬੀ / پنجابی
         pol: Lehçe - polski
         por: Portekizce - português
         pus: Peştuca - پښتو‎
