--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1225,7 +1225,7 @@ de:
         msa: Malaiisch – بهاس ملايو
         mul: weitere Sprachen auf Anfrage
         nor: Norwegisch - Norsk
-        pan: Panjabi - پنجابی / ਪੰਜਾਬੀ
+        pan: Panjabi - ਪੰਜਾਬੀ / پنجابی
         pol: Polnisch - polski
         por: Portugiesisch - português
         pus: Paschtu - پښتو‎
