--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -830,7 +830,7 @@ fr:
         msa: Malais – بهاس ملايو
         mul: autres langues sur demande
         nor: Norvégien - Norsk
-        pan: Pendjabi - پنجابی / ਪੰਜਾਬੀ
+        pan: Pendjabi - ਪੰਜਾਬੀ / پنجابی
         pol: Polonais - polski
         por: Portugais - português
         pus: Pachto - پښتو‎
