--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -740,7 +740,7 @@ ar:
         msa: لغة ملايو – بهاس ملايو
         mul: لغات أخرى عند الطلب
         nor: لغة نرويجية - Norsk
-        pan: لغة بنجابية - ਪੰਜਾਬੀ / پنجابی
+        pan: لغة بنجابية - پنجابی / ਪੰਜਾਬੀ
         pol: لغة بولندية - polski
         por: لغة برتغالية - português
         pus: لغة بشتوية - پښتو‎
