--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -859,7 +859,7 @@ ru:
         msa: Мала́йский язы́к – بهاس ملايو
         mul: другие языки по запросу
         nor: Норвежский язык - Norsk
-        pan: Панджаби - ਪੰਜਾਬੀ / پنجابی
+        pan: Панджаби - پنجابی / ਪੰਜਾਬੀ
         pol: Польский язык - polski
         por: Португальский язык - português
         pus: Пушту - پښتو‎
