--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -749,7 +749,7 @@ tr:
         msa: Malayca – بهاس ملايو
         mul: Talep üzerine diğer diller
         nor: Norveççe - Norsk
-        pan: Pencapça - ਪੰਜਾਬੀ / پنجابی
+        pan: Pencapça - پنجابی / ਪੰਜਾਬੀ
         pol: Lehçe - polski
         por: Portekizce - português
         pus: Peştuca - پښتو‎
